[SELC-5144] Clean code smell